[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/MenuBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/main_menu/MainMenuState.gd" type="Script" id=2]
[ext_resource path="res://common/LoadingLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/MenuPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://common/Log.tscn" type="PackedScene" id=5]
[ext_resource path="res://common/Camera2D.tscn" type="PackedScene" id=6]


[node name="MainMenuState" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" parent="." instance=ExtResource( 6 )]

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuBackground" parent="UICanvasLayer" instance=ExtResource( 1 )]

[node name="MenuPanel" parent="UICanvasLayer" instance=ExtResource( 4 )]

[node name="HostButton" type="Button" parent="UICanvasLayer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 160.0
margin_right = -200.0
margin_bottom = -355.0
rect_scale = Vector2( 2, 2 )
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="UICanvasLayer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 250.0
margin_right = -200.0
margin_bottom = -265.0
rect_scale = Vector2( 2, 2 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="UICanvasLayer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 340.0
margin_right = -200.0
margin_bottom = -175.0
rect_scale = Vector2( 2, 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" parent="UICanvasLayer" instance=ExtResource( 5 )]

[node name="LoadingLabel" parent="UICanvasLayer" instance=ExtResource( 3 )]
